--- a/BCS 230 Assignment 06/BCS 230 Assignment 06.vcxproj.filters
+++ b/BCS 230 Assignment 06/BCS 230 Assignment 06.vcxproj.filters
@@ -21,12 +21,18 @@
     <ClInclude Include="targetver.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="PayRoll.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="BCS 230 Assignment 06.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="PayRoll.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
