--- a/BCS 230 Assignment 06/BCS 230 Assignment 06.vcxproj.filters
+++ b/BCS 230 Assignment 06/BCS 230 Assignment 06.vcxproj.filters
@@ -36,4 +36,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="payroll.dat">
+      <Filter>Resource Files</Filter>
+    </None>
+  </ItemGroup>
 </Project>
